--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Welcome to XFT's xPay!</title>
-    <!-- Include Web3.js -->
-    <script src="https://cdn.jsdelivr.net/npm/web3@1.5.0/dist/web3.min.js"></script>
+    <title>X Financial Technologies</title>
 </head>
 <body>
-    <h1>Smart Contract Interaction Example</h1>
-    <button id="registerUser">Register User</button>
-    <button id="transferFunds">Transfer Funds</button>
+    <h2>Welcome to xPay!</h2>
+    <button id="connectWallet">Connect Wallet</button>
 
-    <script src="app.js"></script>
+    <div>
+        <h3>Deposit ETH</h3>
+        <input type="text" id="depositAmount" placeholder="Amount in Ether">
+        <button id="deposit">Deposit</button>
+    </div>
+
+    <div>
+        <h3>Send ETH</h3>
+        <input type="text" id="sendAmount" placeholder="Amount in Ether">
+        <input type="text" id="recipientAddress" placeholder="Recipient Address">
+        <input type="text" id="sendMessage" placeholder="Message">
+        <button id="send">Send</button>
+    </div>
+
+    <div>
+        <h3>Manage Friends</h3>
+        <input type="text" id="friendAddress" placeholder="Friend's Address">
+        <button id="addFriend">Add Friend</button>
+        <button id="sendFriendRequest">Send Friend Request</button>
+    </div>
+
+    <!-- Button to navigate to profile.html -->
+    <button onclick="window.location.href='wallet.html'">View Profile</button>
+
+    <script src="https://cdn.jsdelivr.net/npm/web3/dist/web3.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
