--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
     <button onclick="window.location.href='wallet.html'">View Profile</button>
 
     <script src="https://cdn.jsdelivr.net/npm/web3/dist/web3.min.js"></script>
-    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
