--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <!-- Button to navigate to profile.html -->
-    <button onclick="window.location.href='wallet.html'">View Profile</button>
+    <button onclick="window.location.href='signup.html'">View Profile</button>
 
     <script src="https://cdn.jsdelivr.net/npm/web3/dist/web3.min.js"></script>
     <script src="app.js"></script>
