--- a/index.html
+++ b/index.html
@@ -1,37 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>X Financial Technologies</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>User Registration</title>
 </head>
 <body>
-    <h2>Welcome to xPay!</h2>
-    <button id="connectWallet">Connect Wallet</button>
+    <h1>User Registration</h1>
+    <input type="text" id="username" placeholder="Enter your username">
+    <button onclick="registerUser()">Register</button>
 
-    <div>
-        <h3>Deposit ETH</h3>
-        <input type="text" id="depositAmount" placeholder="Amount in Ether">
-        <button id="deposit">Deposit</button>
-    </div>
-
-    <div>
-        <h3>Send ETH</h3>
-        <input type="text" id="sendAmount" placeholder="Amount in Ether">
-        <input type="text" id="recipientAddress" placeholder="Recipient Address">
-        <input type="text" id="sendMessage" placeholder="Message">
-        <button id="send">Send</button>
-    </div>
-
-    <div>
-        <h3>Manage Friends</h3>
-        <input type="text" id="friendAddress" placeholder="Friend's Address">
-        <button id="addFriend">Add Friend</button>
-        <button id="sendFriendRequest">Send Friend Request</button>
-    </div>
-
-    <!-- Button to navigate to profile.html -->
-    <button onclick="window.location.href='signup.html'">View Profile</button>
-
+    <!-- Include Web3.js library -->
     <script src="https://cdn.jsdelivr.net/npm/web3/dist/web3.min.js"></script>
-    <script src="app.js"></script>
+    <!-- Include your script.js -->
+    <script src="script.js"></script>
 </body>
 </html>
