--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <input type="text" id="walletAddress" placeholder="Wallet Address">
     <button onclick="getUsername()">Get Username</button>
     <p id="retrievedUsername"></p>
-
+    <button onclick="getContractHistory()">Get Contract History</button>
+    <p id="contractHistory"></p>
     <script src="script.js"></script>
 </body>
 </html>
